Suppression du dossier bower_components et ajout des dépendances dans bower.json, création des scripts de startup 'npm start', ajout du scrollspy

--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,11 @@
     "description": "Un exemple Express.js application utilisant MVC Template",
     "private": true,
     "version": "0.1.4",
+    "scripts": {
+        "prestart": "npm install",
+    	"postart": "bower install",
+        "start": "node app"
+    },
     "dependencies": {
         "express": "~4.10",
         "express-handlebars": "~1.1",
